[tool.poetry]
name = "c-gpt4"
version = "0.1.0"
description = ""
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
readme = "README.md"
packages = [{include = "c_gpt4"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
black = "^23.3.0"
tenacity = "^8.2.2"
termcolor = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
